fix(layout, menu): fix onCollapse trigger logic; add z-index on submenu

--- a/src/components/menu/style/layout.less
+++ b/src/components/menu/style/layout.less
@@ -92,6 +92,7 @@
   // 垂直模式子菜单
   &-submenu-popup {
     position: absolute;
+    z-index: @zindex-dropdown;
     box-sizing: border-box;
 
     .@{menu-prefix-cls} {
